build test image only once